testcases/error/last_item_with_define.veryl
module last_item_with_define {
    enum A {
        X,
        #[ifdef(A)]
        Y,
    }
}
